--- a/index.css
+++ b/index.css
@@ -58,15 +58,16 @@ body {
     background-position: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    height: auto;
     flex-wrap: wrap;
     
 }
 .navbar{
     background-color: rgba(255, 255, 255,0.5);
-    height: 13%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .navlinks{
     display: flex;
@@ -75,6 +76,8 @@ body {
     /* margin-left: 30px; */
     font-size: 23px;
     width: 70%;
+    /* flex-wrap: wrap; */
+    /* height: auto; */
     align-items: center;
 }
 a{
@@ -83,7 +86,7 @@ a{
 .medipluslogo{
     padding: 10px 10px;
     justify-content: flex-start;
-    width: 20%;
+    width: auto;
     margin-left: 90px;
     align-self: center;
     font-weight: bolder;
@@ -109,7 +112,7 @@ li a{
     display: flex;
     flex-direction: column;
     padding: 20px 70px;
-    width: 35%;
+    width: 49%;
     flex-wrap: wrap;
     
 }
@@ -123,6 +126,7 @@ li a{
 .slogan{
     font-size: 40px;
     font-weight: bold;
+    height: auto;
 
 }
 .slogan h1{
@@ -144,8 +148,8 @@ li a{
     text-decoration: none;
     display: inline-block;
     margin: 4px 2px;
-    width: 50%;
-    font-size: 25px;
+    width: 40%;
+    font-size: 16px;
 }
 .pillbutton{
     border-radius: 35px;
@@ -176,7 +180,7 @@ li a{
 .textsecondpart{
     align-self: center;
     width: 40%;
-    margin-right: 300px;
+    margin-right: 10%;
 }
 .textsecondpart h1{
     font-size: 65px;
@@ -224,7 +228,7 @@ li a{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 65%;
+    height: 100%;
     background-size: cover;
     justify-content: center;
     align-items: center;
@@ -348,7 +352,7 @@ li a{
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 85%;
+    height: auto;
     
 }
 .bluelayer{
@@ -438,6 +442,7 @@ table td {
     padding-left: 30px;
     width: 26%;
     margin-right: 0;
+    height: 100%;
 }
 
 .sixcard1 img{
@@ -454,7 +459,7 @@ table td {
     background-repeat: no-repeat;
     /* background-position: 100px 0px; */
     width: 100%;
-    height: 85%;
+    height: auto;
     margin-top: 150px;
     z-index: 0;
 }
@@ -462,7 +467,7 @@ table td {
     background-color: dodgerblue;
     opacity: 0.8;
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -620,7 +625,7 @@ textarea{
     background-image: url('tp7/stethoscope-white.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50%;
+    height: auto;
     margin-top: 150px;
     /* height: 100%; */
 }
@@ -644,7 +649,7 @@ textarea{
     color: dodgerblue;
 }
 .positionsitemap{
-    width: 15%;
+    width: auto;
     height: 100%;
     padding: 16px;
     text-align: left;
@@ -659,7 +664,7 @@ textarea{
     display: none;
 }
 /*  */
-@media screen and (max-width: 900px) { 
+@media screen and (max-width: 1050px) { 
     .horizontalclass{
         display: flex;
     }
@@ -1106,6 +1111,7 @@ textarea{
     .seventhparttext{
         color: white;
         text-align:  center;
+        margin-top: 50px;
         z-index: 2;
     }
     .seventhparttext h1{
@@ -1113,7 +1119,8 @@ textarea{
     }
     .seventhpos{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        flex-direction: column;
         align-items: center;
         width: 100%;
         flex-wrap: wrap;
@@ -1135,15 +1142,16 @@ textarea{
         border-radius: 50%;
         background-color: red;
         padding: 10px;
-        width: 4%;
+        width: 3%;
     
     }
     .iconpositionseventh
     {
-        /* margin-top: 170px;
-        margin-left: 0px; */
-        margin-left: 250px;;
-        position: absolute;
+        /* margin-top: 170px;*/
+        margin: 0% 55% 0% 55%;
+        margin-bottom: -30px;
+        /* margin-left: 250px;; */
+        /* position: absolute; */
     }
     .seventhptrmob{
         width: 90%;
