--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ body {
     background-position: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    width: auto;
     height: auto;
     flex-wrap: wrap;
     
@@ -143,7 +144,7 @@ li a{
     border-radius: 35px;
     color: white;
     text-align: center;
-    padding: 25px 25px;
+    padding: 20px 20px;
     border: none;
     text-decoration: none;
     display: inline-block;
@@ -170,6 +171,7 @@ li a{
     display: flex;
     justify-content: space-around;
     align-content: center;
+    height: auto;
 }
 
 .picturedocoldlady img{
@@ -228,7 +230,7 @@ li a{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 60%;
     background-size: cover;
     justify-content: center;
     align-items: center;
@@ -562,6 +564,7 @@ table td {
     background-color:#f8f9fa;
     padding: 50px 20px 150px 20px;
     margin: 100px 20px;
+    
     /* height: 100%; */
     
     
@@ -625,7 +628,7 @@ textarea{
     background-image: url('tp7/stethoscope-white.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: auto;
+    height: 60%;
     margin-top: 150px;
     /* height: 100%; */
 }
@@ -663,7 +666,20 @@ textarea{
 .mobileonlyvertical{
     display: none;
 }
-/*  */
+
+/* smallerscreens laptops */
+
+@media screen and (min-width: 1440px) { 
+
+    .first_part{
+        height: 90%;
+    }
+    #secondpart{
+        height: 110%;
+    }
+}
+
+/*mobile  */
 @media screen and (max-width: 1050px) { 
     .horizontalclass{
         display: flex;
